--- a/pom.xml
+++ b/pom.xml
@@ -59,7 +59,7 @@
 
 		<dependency>
 			<groupId>org.apache.spark</groupId>
-			<artifactId>spark-sql_2.12</artifactId>
+			<artifactId>spark-sql_2.11</artifactId>
 			<version>2.4.0</version>
 		</dependency>
 
@@ -85,6 +85,12 @@
 			<version>2.3.0</version>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/org.apache.spark/spark-streaming -->
+		<dependency>
+			<groupId>org.apache.spark</groupId>
+			<artifactId>spark-streaming_2.11</artifactId>
+			<version>2.2.0</version>
+		</dependency>
 
 	</dependencies>
 
